# NTRUEncrypt

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  README  README.md  configure.ac  libntruencrypt.sym  libntruencrypt0_1.0.0.orig.tar.gz.delta  libntruencrypt0_1.0.0.orig.tar.gz.id  libntruencrypt1_1.1.0.orig.tar.gz.delta  libntruencrypt1_1.1.0.orig.tar.gz.id  old_bench.txt
debian/: changelog  control  copyright  rules  symbols
include/: Makefile  ntru_crypto.h  ntru_crypto_drbg.h  ntru_crypto_platform.h
sample/: Makefile  Makefile.old  challenge.c  sample_NTRUEncrypt.c
src/: Makefile  Makefile.old  ntru_crypto_drbg.c  ntru_crypto_hash.c  ntru_crypto_hash.h  ntru_crypto_hash_basics.h  ntru_crypto_hmac.c  ntru_crypto_hmac.h  ntru_crypto_msbyte_uint32.c  ntru_crypto_msbyte_uint32.h  ntru_crypto_ntru_convert.c  ntru_crypto_ntru_encrypt.c  ntru_crypto_ntru_encrypt_key.c  ntru_crypto_ntru_encrypt_key.h  ntru_crypto_ntru_encrypt_param_sets.c  ntru_crypto_ntru_encrypt_param_sets.h  ntru_crypto_ntru_mgf1.c  ntru_crypto_ntru_mult_coeffs_karat.c  ntru_crypto_ntru_mult_coeffs_simd.c  ntru_crypto_ntru_mult_indices.c  ntru_crypto_ntru_mult_indices_simd.c  ntru_crypto_ntru_poly.c  ntru_crypto_ntru_poly.h  ntru_crypto_sha.h  ntru_crypto_sha1.c  ntru_crypto_sha1.h  ntru_crypto_sha2.c  ntru_crypto_sha2.h  ntru_crypto_sha256.c  ntru_crypto_sha256.h
test/: Makefile  bench.c  challenge.c  check_common.c  check_common.h  check_internal.c  check_internal_key.c  check_internal_poly.c  check_internal_sha.c  check_public.c  crypto_stream_salsa20.h  sanity.c  test_common.c  test_common.h  test_poly_mul.c
vs2012/: NtruBuild.sln  NtruEncrypt_DLL.vcxproj  Sample_NTRUEncrypt.vcxproj
